force-app/main/default/objects/Property_Registry__c/Property_Registry__c.object-meta.xml
<CustomObject>
    <description>Backend-only claim ledger. One row per distinct property. The unique, case-insensitive Property_Key__c enforces race-safe first-come-first-served registration at the database level.</description>
    <label>Property Registry</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Property Registry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Registry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>