force-app/main/default/objects/Property_Registry__c/fields/Normalized_Address__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Address__c</fullName>
    <label>Normalized Address</label>
    <length>255</length>
    <description>Same value as Property_Key__c today. Kept separate so the fuzzy-match corpus can diverge from the exact-match claim key later without touching the unique constraint.</description>
    <inlineHelpText>Reserved for future fuzzy-match tuning. Currently mirrors Property_Key__c.</inlineHelpText>
    <type>Text</type>
</CustomField>