force-app/main/default/objects/Property_Registry__c/fields/Property_Key__c.field-meta.xml
<CustomField>
    <fullName>Property_Key__c</fullName>
    <externalId>true</externalId>
    <label>Property Key</label>
    <length>255</length>
    <required>true</required>
    <description>Normalized property address used as the atomic claim key. Unique + case insensitive - this constraint is what makes the winner selection race-safe.</description>
    <inlineHelpText>Do not edit directly. Populated by the matching service from the normalized inbound property address.</inlineHelpText>
    <type>Text</type>
    <unique>true</unique>
</CustomField>