force-app/main/default/objects/Property_Registry__c/fields/Registered_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Registered_DateTime__c</fullName>
    <label>Registered Date/Time</label>
    <description>When this property was claimed. Drives the LOOKBACK_DAYS window on the fuzzy-match candidate query.</description>
    <inlineHelpText>Set once, at claim time. Not updated afterward.</inlineHelpText>
    <type>DateTime</type>
</CustomField>