force-app/main/default/objects/Property_Registry__c/fields/Winning_Lead__c.field-meta.xml
<CustomField>
    <fullName>Winning_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Lead</label>
    <description>The Lead that claimed this property first. Salesforce forbids Restrict/Cascade on lookups to Lead, so presence is enforced by the Winning_Lead_Required validation rule instead.</description>
    <inlineHelpText>The first Lead to submit this property. Left blank only if that Lead was later deleted.</inlineHelpText>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Property Registry</relationshipLabel>
    <relationshipName>Property_Registry</relationshipName>
    <type>Lookup</type>
</CustomField>