force-app/main/default/objects/Property_Registry__c/validationRules/Winning_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Winning_Lead_Required</fullName>
    <active>true</active>
    <description>Insert-scoped stand-in for a required lookup (Salesforce rejects Restrict/Cascade on lookups to Lead). Scoped to ISNEW() so nulling the lookup when a Lead is deleted does not block the delete.</description>
    <errorConditionFormula>AND(ISNEW(), ISBLANK(Winning_Lead__c))</errorConditionFormula>
    <errorDisplayField>Winning_Lead__c</errorDisplayField>
    <errorMessage>Winning Lead is required on a property registry entry.</errorMessage>
</ValidationRule>